# puppet-fdio-1

./: .gitignore  .gitreview  LICENSE  README.md  Rakefile  metadata.json  setup.cfg
lib/puppet/provider/vpp_config/: vpp.rb
lib/puppet/provider/vpp_service/: vpp.rb
lib/puppet/type/: vpp_config.rb  vpp_service.rb
manifests/: config.pp  honeycomb.pp  init.pp  install.pp  params.pp  service.pp
manifests/config/: vpp_devices.pp  vpp_exec_line.pp
manifests/honeycomb/: configure_role_mappings.pp
releasenotes/source/: conf.py  index.rst
scripts/: allow-local-ssh-root.sh  ci-beaker.sh  ci-unit-tests.sh  prepare-node.sh
spec/: spec_helper_acceptance.rb
spec/acceptance/: fdio_spec.rb  honeycomb_spec.rb
spec/classes/: fdio_spec.rb  honeycomb_spec.rb
spec/unit/provider/vpp_config/: vpp_spec.rb
spec/unit/provider/vpp_service/: vpp_spec.rb
spec/unit/type/: vpp_config_spec.rb  vpp_service_spec.rb
templates/: honeycomb.json.erb  startup.conf.erb
