[metadata]
name = puppet-fdio
summary = Puppet module for fdio
description-file =
    README.md
author = Feng Pan
author-email = fpan@redhat.com
home-page = https://wiki.fd.io/view/Puppet-fdio
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
